<?xml version="1.0"?>
<package>
  <name>imu_complementary_filter</name>
  <version>1.2.2</version>
  <description>Filter which fuses angular velocities, accelerations, and (optionally) magnetic readings from a generic IMU device into a quaternion to represent the orientation of the device wrt the global frame. Based on the algorithm by Roberto G. Valenti etal. described in the paper "Keeping a Good Attitude: A Quaternion-Based Orientation Filter for IMUs and MARGs" available at http://www.mdpi.com/1424-8220/15/8/19302 .</description>

  <maintainer email="robertogl.valenti@gmail.com">Roberto G. Valenti</maintainer>
  <license>BSD</license>
 
  <url>http://www.mdpi.com/1424-8220/15/8/19302</url>
  <author email="robertogl.valenti@gmail.com">Roberto G. Valenti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
