<package>
  <name> imu_tools </name>
  <version>1.2.2</version>
  <description>
    Various tools for IMU devices
  </description>
  <maintainer email="martin.guenther1980@gmail.com">Martin Günther</maintainer>
  <license>BSD, GPL</license>

  <url>http://ros.org/wiki/imu_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_complementary_filter</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
