<package format="3">
  <name> imu_tools </name>
  <version>2.1.3</version>
  <description>
    Various tools for IMU devices
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <license>BSD, GPL</license>

  <url>http://ros.org/wiki/imu_tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
