<package>
  <name>rviz_imu_plugin</name>
  <version>1.2.2</version>
  <description>
    RVIZ plugin for IMU visualization
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_imu_plugin</url>
  <author email="ivan.dryanovski@gmail.com">Ivan Dryanovski</author>
  <maintainer email="martin.guenther1980@gmail.com">Martin Günther</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
