<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_imu_plugin</name>
  <version>2.1.3</version>
  <description>
    RVIZ plugin for IMU visualization
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_imu_plugin</url>
  <author email="ivan.dryanovski@gmail.com">Ivan Dryanovski</author>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>message_filters</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
